--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -27,8 +27,9 @@
 
 \hline
 {\bf Other Alcoholic Drinks} & & \\
-Bottled beer/cider (500ml) & \pounds 1.60/bottle & \pounds 1.90/bottle \\
-Bottled beer/cider (330ml) & \pounds 1.00/bottle & \pounds 1.20/bottle \medskip \\
+Bottled beer/cider & \pounds 1.70/bottle & \pounds 2.00/bottle \\
+% Import Bottled beer/cider (small) & \pounds 1.70/bottle & \pounds 2.00/bottle \medskip \\
+UK canned beer & \pounds 1.40/can & \pounds 1.65/can \medskip \\
 
 \hline
 {\bf Soft Drinks} &&\\
@@ -37,7 +38,7 @@ Fruit juice & 20p/glass & 25p/glass \medskip \\
 
 \hline
 {\bf Snacks} & & \\
-Crisps, Popcorn &\pounds 1.40 &\pounds 1.60 \\
+Crisps, Popcorn &\pounds 1.40 &\pounds 1.65 \\
 Nuts &\pounds 1.50 &\pounds 1.80 \\
 
 \end{tabular}
