--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -34,7 +34,7 @@ UK canned beer & \pounds 1.40/can & \pounds 1.65/can \medskip \\
 \hline
 {\bf Soft Drinks} &&\\
 (Diet) Coke, Fanta, Sprite & 50p/can  & 60p/can \\
-Fruit juice & 20p/glass & 25p/glass \medskip \\
+Fruit juice & 20p/small~cup & 25p/small~cup \medskip \\
 
 \hline
 {\bf Snacks} & & \\
