--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -33,13 +33,13 @@ UK canned beer & \pounds 1.40/can & \pounds 1.65/can \medskip \\
 
 \hline
 {\bf Soft Drinks} &&\\
-(Diet) Coke, Fanta, Sprite & 50p/can  & 60p/can \\
-Fruit juice & 20p/small~cup & 25p/small~cup \medskip \\
+(Diet) Coke, Fanta, Sprite & 50p/can  & 60p/can \medskip\\
+Fruit juice & 20p/small~cup & 25p/small~cup \\
+& 50p/pint & 60p/pint \medskip \\
 
 \hline
 {\bf Snacks} & & \\
-Crisps, Popcorn &\pounds 1.40 &\pounds 1.65 \\
-Nuts &\pounds 1.50 &\pounds 1.80 \\
+Crisps, Popcorn, Nuts &\pounds 1.50 &\pounds 1.80 \\
 
 \end{tabular}
 \end{center}
