Savings on crisps

--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -39,7 +39,7 @@ Fruit juice & 20p/small~cup & 25p/small~cup \\
 
 \hline
 {\bf Snacks} & & \\
-Crisps, Popcorn, Nuts &\pounds 1.50 &\pounds 1.80 \\
+Crisps, Nuts &\pounds 1.30 &\pounds 1.60 \\
 
 \end{tabular}
 \end{center}
