--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -29,11 +29,13 @@
 {\bf Other Alcoholic Drinks} & & \\
 Bottled beer/cider & \pounds 1.70/bottle & \pounds 2.00/bottle \\
 % Import Bottled beer/cider (small) & \pounds 1.70/bottle & \pounds 2.00/bottle \medskip \\
-UK canned beer & \pounds 1.40/can & \pounds 1.65/can \medskip \\
+Canned beer & \pounds 1.40/can & \pounds 1.65/can \\
+Canned cider & \pounds 1.00/can & \pounds 1.20/can \medskip \\
 
 \hline
 {\bf Soft Drinks} &&\\
-(Diet) Coke, Fanta, Sprite & 50p/can  & 60p/can \medskip\\
+(Diet) Coke & 50p/can  & 60p/can \\
+San Pellegrino & 75p/can & 90p/can \medskip \\
 Fruit juice & 20p/small~cup & 25p/small~cup \\
 & 50p/pint & 60p/pint \medskip \\
 
