Add footer msg about empty bottles.

--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -2,9 +2,14 @@
 
 \usepackage{geometry}
 \usepackage{graphicx}
+\usepackage{fancyhdr}
+
+\pagestyle{fancy}
+\renewcommand{\headrulewidth}{0.0pt}
+\cfoot{\em Please place empty bottles in the yellow bin or the window sill only.}
+
 
 \begin{document}
-\thispagestyle{empty}
 
 \begin{center}
 	\includegraphics[width=0.25\linewidth]{fig/<FIGNAME>.png} \par \bigskip \bigskip \bigskip
