minor price adjustments

--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -40,13 +40,13 @@ Canned cider & \pounds 1.00/can & \pounds 1.20/can \medskip \\
 \hline
 {\bf Soft Drinks} &&\\
 (Diet) Coke & 50p/can  & 60p/can \\
-San Pellegrino & 75p/can & 90p/can \medskip \\
 Fruit juice & 20p/small~cup & 25p/small~cup \\
 & 50p/pint & 60p/pint \medskip \\
 
 \hline
 {\bf Snacks} & & \\
-Crisps, Nuts &\pounds 1.30 &\pounds 1.60 \\
+Nuts &\pounds 0.50 &\pounds 0.60 \\
+Crisps &\pounds 1.00 &\pounds 1.20 \\
 
 \end{tabular}
 \end{center}
