cambridge spark sponsor of this upcoming happy hour

--- a/happyhour_free_portrait.tex
+++ b/happyhour_free_portrait.tex
@@ -1,17 +1,21 @@
 \documentclass[a4paper,portrait]{article}
 
+\usepackage{url}
 \usepackage[margin=1in]{geometry}
 \usepackage{graphicx}
+\usepackage[space]{grffile}
+
 
 \newcommand{\half}{$\tfrac{1}{2}$}
 
 \begin{document}
+\sf
 \thispagestyle{empty}
 
 \begin{center}
 
-    {\Large Part II Party / Happy Hour} \\ \smallskip
-    {\large 4.00pm Friday \today}
+    {\Large Happy Hour} \\ \smallskip
+    {\large 5:00pm Friday \today}
 
     \vfill
 
@@ -20,10 +24,25 @@
 
     \vfill
 
-    \includegraphics[width=0.5\linewidth]{fig/justinian.png} \bigskip \bigskip
+    \textbf{\Large Sponsored by} \\ \bigskip
 
-    \textbf{\Large The Real Deal -- Justinian (3.9\%)} \\ \bigskip
-    {\large Crisp pale bronze-coloured bitter. Attractive bitter orange flavours \\ persist into a satisfying lasting finish.}
+    \includegraphics[width=0.5\linewidth]{cspark-small-logo.png} \bigskip \bigskip
+
+    \begin{minipage}{0.6\textwidth}{\large
+At Cambridge Spark we provide continuous professional development for
+data scientist and developers.
+
+\bigskip
+
+If you want to teach, design courses, write tutorials or otherwise get
+involved with us, get in touch!
+
+\bigskip \centering
+
+}
+    \end{minipage}
+
+    \Large \url{cambridgespark.com}
 
     \vfill
 
