price adjustments for latest order

--- a/happyhour_free_portrait.tex
+++ b/happyhour_free_portrait.tex
@@ -46,7 +46,8 @@ involved with us, get in touch!
 
     \vfill
 
-    \textit{\Large Courtesy of the The Computer Lab}
+\bigskip
+Please place used bottles in the yellow bin or on the windowsill.
 
 \end{center}
 
