price updates for now

--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -41,21 +41,21 @@
 
 \hline
 {\bf Other Alcoholic Drinks} & & \\
-Large 500ml bottle: beer or cider & \pounds 1.70/bottle & \pounds 2.00/bottle \\
-Small 330ml bottle: Leffe or cider & \pounds 1.40/bottle & \pounds 1.65/bottle \\
-San Miguel 330ml bottle & \pounds 1.20/bottle & \pounds 1.40/bottle \\
-Cabernet Sauvignon (per 125ml) & \pounds 1.20/glass & \pounds 1.40/glass \medskip \\
+Large 500ml bottle: beer or cider & \pounds 1.80/bottle & \pounds 2.10/bottle \\
+Small 330ml bottle: Leffe or cider & \pounds 1.50/bottle & \pounds 1.80/bottle \\
+Grolsch 330ml bottle & \pounds 1.20/bottle & \pounds 1.50/bottle \\
+Cabernet Sauvignon (per 125ml) & \pounds 1.30/glass & \pounds 1.60/glass \medskip \\
 
 \hline
 {\bf Soft Drinks} &&\\
-(Diet) Coke & 50p/can  & 60p/can \\
-San Pellegrino & 75p/can & 90p/can \\
-Fruit juice & 20p/small~cup & 25p/small~cup \medskip \\
+(Diet) Coke \& Fanta & 50p/can  & 60p/can \\
+San Pellegrino & 80p/can & \pounds 1.00/can \\
+Fruit juice (fridge) & 20p/small~cup & 25p/small~cup \medskip \\
 
 \hline
 {\bf Snacks} & & \\
 Nuts &\pounds 1.00 &\pounds 1.20 \\
-Crisps &\pounds 1.25 &\pounds 1.50 \\
+Crisps &\pounds 1.30 &\pounds 1.50 \\
 
 \end{tabular}
 \end{center}
