--- a/happyhour_free_portrait.tex
+++ b/happyhour_free_portrait.tex
@@ -4,6 +4,14 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{graphicx}
 \usepackage[space]{grffile}
+\usepackage[pscoord]{eso-pic}
+
+\newcommand{\placetextbox}[3]{% \placetextbox{<horizontal pos>}{<vertical pos>}{<stuff>}
+  \setbox0=\hbox{#3}% Put <stuff> in a box
+  \AddToShipoutPictureFG*{% Add <stuff> to current page foreground
+    \put(\LenToUnit{#1\paperwidth},\LenToUnit{#2\paperheight}){\vtop{{\null}\makebox[0pt][c]{#3}}}%
+  }%
+}%
 
 
 \newcommand{\half}{$\tfrac{1}{2}$}
@@ -19,37 +27,36 @@
 
     \vfill
 
-    {\huge Beer, Drinks, Snacks}\\ \bigskip \bigskip
+    {\huge Beer, Drinks, Food}\\ \bigskip \bigskip
     \resizebox{0.8\linewidth}{!}{FREE}
 
+    {\Large (Any additional donations always appreciated)}
+
     \vfill
 
-    \textbf{\Large Sponsored by} \\ \bigskip
+    \includegraphics[width=0.5\linewidth]{fig/marcus aurelius.png} \bigskip \bigskip
 
-    \includegraphics[width=0.5\linewidth]{cspark-small-logo.png} \bigskip \bigskip
+    \textbf{\Large The Real Deal --- Marcus Aurelius (7.5\%)} \\ \bigskip
+    {\large Imperial Roman Stout --- an enormous, luscious and velvety stout. Bursting with dark, roasty flavour with an underlying vanilla richness.}
+
+
+    \vfill
+
+
+
+    \textbf{\Large Sponsored by Cambridge Cyber Limited} \\ \bigskip
 
     \begin{minipage}{0.6\textwidth}{\large
-At Cambridge Spark we provide continuous professional development for
-data scientist and developers.
-
-\bigskip
-
-If you want to teach, design courses, write tutorials or otherwise get
-involved with us, get in touch!
-
-\bigskip \centering
-
-}
-    \end{minipage}
-
-    \Large \url{cambridgespark.com}
+    ``Delivering expert-led training and vulnerability assessment services to strengthen your organisation's security.''
+  }\end{minipage}
 
     \vfill
 
-\bigskip
-Please place used bottles in the yellow bin or on the windowsill.
+{\large Other alcoholic and non-alcoholic beverages also available. \\Please place used glass bottles in the yellow bin.}
 
 \end{center}
 
-\medskip
+
+\placetextbox{0.75}{0.05}{\footnotesize For more information please re-read this poster}%
+
 \end{document}
