23 june free happy hour

--- a/happyhour_free_portrait.tex
+++ b/happyhour_free_portrait.tex
@@ -34,10 +34,10 @@
 
     \vfill
 
-    \includegraphics[width=0.5\linewidth]{fig/marcus aurelius.png} \bigskip \bigskip
+    \includegraphics[width=0.5\linewidth]{fig/medusa.png} \bigskip \bigskip
 
-    \textbf{\Large The Real Deal --- Marcus Aurelius (7.5\%)} \\ \bigskip
-    {\large Imperial Roman Stout --- an enormous, luscious and velvety stout. Bursting with dark, roasty flavour with an underlying vanilla richness.}
+    \textbf{\Large The Real Deal --- Medusa (4.6\%)} \\ \bigskip
+    {\large Strong mild. Cocoa, vanilla and fruitcake aromas are backed by a satisfying yet subtle bitterness. Very drinkable. }
 
 
     \vfill
@@ -57,6 +57,6 @@
 \end{center}
 
 
-\placetextbox{0.75}{0.05}{\footnotesize For more information please re-read this poster}%
+\placetextbox{0.75}{0.05}{\footnotesize For more information please re-read}%
 
 \end{document}
