make figure bigger

--- a/happyhour_free_portrait.tex
+++ b/happyhour_free_portrait.tex
@@ -30,25 +30,21 @@
     {\huge Beer, Drinks, Food}\\ \bigskip \bigskip
     \resizebox{0.8\linewidth}{!}{FREE}
 
-    {\Large (Any additional donations always appreciated)}
+    %{\Large (Any additional donations always appreciated)}
 
     \vfill
 
-    \includegraphics[width=0.5\linewidth]{fig/medusa.png} \bigskip \bigskip
+    \includegraphics[width=0.5\linewidth]{fig/sparta.png} \bigskip \bigskip
 
-    \textbf{\Large The Real Deal --- Medusa (4.6\%)} \\ \bigskip
-    {\large Strong mild. Cocoa, vanilla and fruitcake aromas are backed by a satisfying yet subtle bitterness. Very drinkable. }
+    \textbf{\Large The Real Deal --- Sparta (4.3\%)} \\ \bigskip
+    {\large Refreshing pale bitter. Packed with hop flavours and crisp bitterness.}
 
 
     \vfill
 
 
 
-    \textbf{\Large Sponsored by Cambridge Cyber Limited} \\ \bigskip
 
-    \begin{minipage}{0.6\textwidth}{\large
-    ``Delivering expert-led training and vulnerability assessment services to strengthen your organisation's security.''
-  }\end{minipage}
 
     \vfill
 
