--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -20,8 +20,10 @@
 
 \begin{document}
 
+\placetextbox{0.5}{0.95}{\includegraphics[width=0.35\linewidth]{fig/<FIGNAME>.png}}
 \begin{center}
-	\includegraphics[width=0.20\linewidth]{fig/<FIGNAME>.png} \par \bigskip \bigskip \bigskip
+  ~\vspace{5em}
+   \par \bigskip \bigskip \bigskip
     {\Large Computer Lab Happy Hour} \\ \smallskip
     {5.00pm Friday \today}
 \end{center}
@@ -33,31 +35,31 @@
 
 \def\arraystretch{1.1}
 
-\begin{tabular}{p{7.5cm}|p{3cm}|p{3cm}} & \textbf{Cost price} & \textbf{Suggested donation} \\
+\begin{tabular}{p{7.5cm}p{3cm}p{3cm}} & \textbf{Cost price} & \textbf{Suggested donation} \\
 \hline
 \textbf{The Real Deal} & & \\
 <NAME> (<STRENGTH>\%) & \pounds <COST_PRICE>/pint & \pounds <PRICE>/pint \\
 \small \it <DESC> \medskip & & \\
 
-\hline
+%\hline
 {\bf Other Alcoholic Drinks} & & \\
 Large 500ml bottle: beer or cider & \pounds 1.80/bottle & \pounds 2.10/bottle \\
 Small 330ml bottle: Leffe or cider & \pounds 1.50/bottle & \pounds 1.80/bottle \\
-Grolsch 330ml bottle & \pounds 1.20/bottle & \pounds 1.50/bottle \\
+Estrella 330ml bottle & \pounds 1.20/bottle & \pounds 1.50/bottle \\
 Cabernet Sauvignon (per 125ml) & \pounds 1.30/glass & \pounds 1.60/glass \medskip \\
 
-\hline
+%\hline
 {\bf Soft Drinks} &&\\
 (Diet) Coke \& Fanta & 50p/can  & 60p/can \\
 San Pellegrino & 80p/can & \pounds 1.00/can \\
 Fruit juice (fridge) & 20p/small~cup & 25p/small~cup \medskip \\
 
-\hline
+%\hline
 {\bf Snacks} & & \\
-Nuts &\pounds 1.00 &\pounds 1.20 \\
-Crisps &\pounds 1.30 &\pounds 1.50 \\
-
+% Nuts &\pounds 1.00 &\pounds 1.20 \\
+Crisps &\pounds 1.00 &\pounds 1.20 \\
+\hline
 \end{tabular}
 \end{center}
-\placetextbox{0.75}{0.1}{\tiny For more information please re-read this menu}%
+\placetextbox{0.75}{0.1}{\footnotesize For more information please re-read}%
 \end{document}
