--- a/happyhour_free_portrait.tex
+++ b/happyhour_free_portrait.tex
@@ -34,10 +34,10 @@
 
     \vfill
 
-    \includegraphics[width=0.5\linewidth]{fig/sparta.png} \bigskip \bigskip
+    \includegraphics[width=0.5\linewidth]{fig/minotaur.png} \bigskip \bigskip
 
-    \textbf{\Large The Real Deal --- Sparta (4.3\%)} \\ \bigskip
-    {\large Refreshing pale bitter. Packed with hop flavours and crisp bitterness.}
+    \textbf{\Large The Real Deal --- Minotaur (3.3\%)} \\ \bigskip
+    {\large A rich dark mild with bags of character from the lavish use of chocolate malt.}
 
 
     \vfill
