--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -43,21 +43,21 @@
 
 %\hline
 {\bf Other Alcoholic Drinks} & & \\
-Large 500ml bottle: beer or cider & \pounds 1.80/bottle & \pounds 2.10/bottle \\
-Small 330ml bottle: Leffe or cider & \pounds 1.50/bottle & \pounds 1.80/bottle \\
-Estrella 330ml bottle & \pounds 1.20/bottle & \pounds 1.50/bottle \\
+Large 500ml bottle: beer / cider & \pounds 1.70/bottle & \pounds 2.00/bottle \\
+Small 330ml bottle: Belgian / cider & \pounds 1.50/bottle & \pounds 1.80/bottle \\
+Budweiser / Grolsch 330ml bottle & \pounds 1.20/bottle & \pounds 1.50/bottle \\
 Cabernet Sauvignon (per 125ml) & \pounds 1.30/glass & \pounds 1.60/glass \medskip \\
 
 %\hline
 {\bf Soft Drinks} &&\\
 (Diet) Coke \& Fanta & 50p/can  & 60p/can \\
-San Pellegrino & 80p/can & \pounds 1.00/can \\
+%San Pellegrino & 80p/can & \pounds 1.00/can \\
 Fruit juice (fridge) & 20p/small~cup & 25p/small~cup \medskip \\
 
 %\hline
 {\bf Snacks} & & \\
 % Nuts &\pounds 1.00 &\pounds 1.20 \\
-Crisps &\pounds 1.00 &\pounds 1.20 \\
+Crisps/Nuts &\pounds 1.00 &\pounds 1.20 \\
 \hline
 \end{tabular}
 \end{center}
