San Pel. is back

--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -51,7 +51,7 @@ Cabernet Sauvignon (per 125ml) & \pounds 1.30/glass & \pounds 1.60/glass \medski
 %\hline
 {\bf Soft Drinks} &&\\
 (Diet) Coke \& Fanta & 50p/can  & 60p/can \\
-%San Pellegrino & 80p/can & \pounds 1.00/can \\
+San Pellegrino & 80p/can & \pounds 1.00/can \\
 Fruit juice (fridge) & 20p/small~cup & 25p/small~cup \medskip \\
 
 %\hline
