--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -45,7 +45,7 @@
 {\bf Other Alcoholic Drinks} & & \\
 Large 500ml bottle: beer / cider & \pounds 1.70/bottle & \pounds 2.00/bottle \\
 Small 330ml bottle: Belgian / cider & \pounds 1.50/bottle & \pounds 1.80/bottle \\
-Budweiser / Grolsch 330ml bottle & \pounds 1.20/bottle & \pounds 1.50/bottle \\
+Budweiser 330ml bottle & \pounds 1.20/bottle & \pounds 1.50/bottle \\
 Cabernet Sauvignon (per 125ml) & \pounds 1.30/glass & \pounds 1.60/glass \medskip \\
 
 %\hline
