add Psyche plus additional name variation

--- a/happyhour_free_portrait.tex
+++ b/happyhour_free_portrait.tex
@@ -48,7 +48,7 @@
 
     \vfill
 
-{\large Other alcoholic and non-alcoholic beverages also available. \\Please place used glass bottles in the yellow bin.}
+{\Large Other alcoholic and non-alcoholic beverages also available. \\Please do not move beer cask without assistance. \\[0.7em]Please place used glass bottles in the yellow bin.}
 
 \end{center}
 
