--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -24,7 +24,7 @@
 \begin{center}
   ~\vspace{5em}
    \par \bigskip \bigskip \bigskip
-    {\Large Computer Lab Happy Hour} \\ \smallskip
+    {\Large Computer Lab Happy Hour } \\ \smallskip
     {5.00pm Friday \today}
 \end{center}
 
@@ -43,20 +43,21 @@
 
 %\hline
 {\bf Other Alcoholic Drinks} & & \\
+%Simon's Cider & \pounds 1.00/pint & \pounds 1.20/pint \\
 Large 500ml bottle: beer / cider & \pounds 1.70/bottle & \pounds 2.00/bottle \\
 Small 330ml bottle: Belgian / cider & \pounds 1.50/bottle & \pounds 1.80/bottle \\
-Budweiser 330ml bottle & \pounds 1.20/bottle & \pounds 1.50/bottle \\
-Cabernet Sauvignon (per 125ml) & \pounds 1.30/glass & \pounds 1.60/glass \medskip \\
+Lager 440ml can & \pounds 1.00/can & \pounds 1.20/can \\
+% Cabernet Sauvignon (per 125ml) & \pounds 1.30/glass & \pounds 1.60/glass \\
+\medskip
 
 %\hline
 {\bf Soft Drinks} &&\\
 (Diet) Coke \& Fanta & 50p/can  & 60p/can \\
 San Pellegrino & 80p/can & \pounds 1.00/can \\
-Fruit juice (fridge) & 20p/small~cup & 25p/small~cup \medskip \\
+ Fruit juice (fridge) & 20p/small~cup & 25p/small~cup \medskip \\
 
 %\hline
 {\bf Snacks} & & \\
-% Nuts &\pounds 1.00 &\pounds 1.20 \\
 Crisps/Nuts &\pounds 1.00 &\pounds 1.20 \\
 \hline
 \end{tabular}
