--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -17,15 +17,15 @@
 \renewcommand{\headrulewidth}{0.0pt}
 \cfoot{\em Please place empty bottles in the yellow bin or the window sill only.}
 
-
 \begin{document}
 
 \placetextbox{0.5}{0.95}{\includegraphics[width=0.35\linewidth]{fig/<FIGNAME>.png}}
 \begin{center}
   ~\vspace{5em}
    \par \bigskip \bigskip \bigskip
+    %{\Large Computer Lab Happy Hour (Winter Quiz!) } \\ \smallskip
     {\Large Computer Lab Happy Hour } \\ \smallskip
-    {5.00pm Friday \today}
+    {5.00pm  \today}
 \end{center}
 
 \bigskip
@@ -44,21 +44,25 @@
 %\hline
 {\bf Other Alcoholic Drinks} & & \\
 %Simon's Cider & \pounds 1.00/pint & \pounds 1.20/pint \\
-Large 500ml bottle: beer / cider & \pounds 1.70/bottle & \pounds 2.00/bottle \\
-Small 330ml bottle: Belgian / cider & \pounds 1.50/bottle & \pounds 1.80/bottle \\
-Lager 440ml can & \pounds 1.00/can & \pounds 1.20/can \\
-% Cabernet Sauvignon (per 125ml) & \pounds 1.30/glass & \pounds 1.60/glass \\
+%Large 500ml bottle: beer / cider & \pounds 1.70/bottle & \pounds 2.00/bottle \\
+%Leffe bottle & \pounds 1.50/bottle & \pounds 1.80/bottle \\
+Cider/Ginger/Leffe bottle & \pounds 1.50/bottle & \pounds 1.80/bottle \\
+%Brewdog can & \pounds 1.50/can & \pounds 1.80/can \\
+Cider can & \pounds 1.20/can & \pounds 1.50/can \\
+Stella/Kronenbourg Lager can & \pounds 1.00/can & \pounds 1.20/can \\
+%Cabernet Sauvignon (per 125ml) & \pounds 1.30/glass & \pounds 1.60/glass \\
 \medskip
 
 %\hline
 {\bf Soft Drinks} &&\\
 (Diet) Coke \& Fanta & 50p/can  & 60p/can \\
 San Pellegrino & 80p/can & \pounds 1.00/can \\
- Fruit juice (fridge) & 20p/small~cup & 25p/small~cup \medskip \\
+Fruit juice/Poured soda & 20p/small~cup & 25p/small~cup \medskip \\
 
 %\hline
 {\bf Snacks} & & \\
-Crisps/Nuts &\pounds 1.00 &\pounds 1.20 \\
+Crisps/Large Nuts &\pounds 1.00/bag &\pounds 1.20/bag \\
+Small Nuts & 50p/bag & 60p/bag \\
 \hline
 \end{tabular}
 \end{center}
