--- a/happyhour_free_portrait.tex
+++ b/happyhour_free_portrait.tex
@@ -22,28 +22,27 @@
 
 \begin{center}
 
-    {\Large Happy Hour} \\ \smallskip
-    {\large 5:00pm Friday \today}
+    {\Large Computer Lab \& Happy Hour crew present:} \\ \smallskip
+    {\Large Happy Hour \today}
 
     \vfill
 
     {\huge Beer, Drinks, Food}\\ \bigskip \bigskip
-    \resizebox{0.8\linewidth}{!}{FREE}
-
-    %{\Large (Any additional donations always appreciated)}
+    \resizebox{0.5\linewidth}{!}{FREE}
 
     \vfill
 
-    \includegraphics[width=0.5\linewidth]{fig/minotaur.png} \bigskip \bigskip
+    \includegraphics[width=0.7\linewidth]{fig/dionysus.png} \bigskip \bigskip \\{\large Straw-coloured bitter, powerfully hoppy, with a citrus finish. }
+    %\includegraphics[width=0.7\linewidth]{fig/pegasus.png} \bigskip \bigskip \\{\large Complex copper-coloured beer. Initial hoppiness balanced with a long fruity, malty finish. }
+    %\includegraphics[width=0.7\linewidth]{fig/sparta.png} \bigskip \bigskip \\{\large Refreshing pale bitter. Packed with hop flavours and crisp bitterness.}
+    %\includegraphics[width=0.7\linewidth]{fig/nero.png} \bigskip \bigskip \\{\large A satisfying, full-flavoured black brew with a good balance of malt, roast and fruit. Bittersweet flavours carry through to a dry finish. \\[1em] This beer is 'unfined': suitable for vegans.}
+    %\includegraphics[width=0.7\linewidth]{applelabel.png} \bigskip \bigskip \\{\large Sweet `P' 5.4\% ABV --- Sweet Eastern Counties style cider. Simon's Cider is fermented using 100\% juice from unsprayed apples donated from gardens and orchards around Cambridgeshire.}
+    %\includegraphics[width=0.7\linewidth]{simons-medium-sweet.jpg} \bigskip \bigskip \\{\large Sweet `P' 5.4\% ABV --- Sweet Eastern Counties style cider. Simon's Cider is fermented using 100\% juice from unsprayed apples donated from gardens and orchards around Cambridgeshire.}
 
-    \textbf{\Large The Real Deal --- Minotaur (3.3\%)} \\ \bigskip
-    {\large A rich dark mild with bags of character from the lavish use of chocolate malt.}
+    % \textbf{\Large Pegasus Ale (4.1\%)} \\ \bigskip
 
-
-    \vfill
-
-
-
+    %\vfill
+    %{\large This cider does not contain gluten.}
 
 
     \vfill
