switchover to +donation concept

--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -28,17 +28,20 @@
     {5.00pm  \today}
 \end{center}
 
-\bigskip
+\medskip
 
 \large
 \begin{center}
+
+{\em Additional donations after cost may also be made into the designated charity boxes. Thanks! } \\
+\bigskip
 
 \def\arraystretch{1.1}
 
 \begin{tabular}{p{7.5cm}p{3cm}p{3cm}} & \textbf{Cost price} & \textbf{Suggested donation} \\
 \hline
 \textbf{The Real Deal} & & \\
-<NAME> (<STRENGTH>\%) & \pounds <COST_PRICE>/pint & \pounds <PRICE>/pint \\
+<NAME> (<STRENGTH>\%) & \pounds <COST_PRICE>/pint & +<DONATION>p/pint \\
 \small \it <DESC> \medskip & & \\
 
 %\hline
@@ -46,23 +49,23 @@
 %Simon's Cider & \pounds 1.00/pint & \pounds 1.20/pint \\
 %Large 500ml bottle: beer / cider & \pounds 1.70/bottle & \pounds 2.00/bottle \\
 %Leffe bottle & \pounds 1.50/bottle & \pounds 1.80/bottle \\
-Cider/Ginger/Leffe bottle & \pounds 1.50/bottle & \pounds 1.80/bottle \\
+Cider/Ginger/Leffe bottle & \pounds 1.50/bottle & +30p/bottle \\
 %Brewdog can & \pounds 1.50/can & \pounds 1.80/can \\
-Cider can & \pounds 1.20/can & \pounds 1.50/can \\
-Stella/Kronenbourg Lager can & \pounds 1.00/can & \pounds 1.20/can \\
+Cider can & \pounds 1.20/can & +30p/can \\
+Stella/Kronenbourg Lager can & \pounds 1.00/can & +20p/can \\
 %Cabernet Sauvignon (per 125ml) & \pounds 1.30/glass & \pounds 1.60/glass \\
 \medskip
 
 %\hline
 {\bf Soft Drinks} &&\\
-(Diet) Coke \& Fanta & 50p/can  & 60p/can \\
-San Pellegrino & 80p/can & \pounds 1.00/can \\
-Fruit juice/Poured soda & 20p/small~cup & 25p/small~cup \medskip \\
+(Diet) Coke \& Fanta & 50p/can  & +10p/can \\
+San Pellegrino & 80p/can & +20p/can \\
+Fruit juice/Poured soda & 20p/small~cup & +5p/small~cup \medskip \\
 
 %\hline
 {\bf Snacks} & & \\
-Crisps/Large Nuts &\pounds 1.00/bag &\pounds 1.20/bag \\
-Small Nuts & 50p/bag & 60p/bag \\
+Crisps/Large Nuts &\pounds 1.00/bag & +20p/bag \\
+Small Nuts & 50p/bag & +10p/bag \\
 \hline
 \end{tabular}
 \end{center}
