--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -19,22 +19,23 @@
 
 \begin{document}
 
-\placetextbox{0.5}{0.95}{\includegraphics[width=0.35\linewidth]{fig/<FIGNAME>.png}}
+\placetextbox{0.5}{0.97}{\includegraphics[width=0.35\linewidth]{fig/<FIGNAME>.png}}
 \begin{center}
   ~\vspace{5em}
-   \par \bigskip \bigskip \bigskip
+   \par \bigskip \bigskip \smallskip
     %{\Large Computer Lab Happy Hour (Winter Quiz!) } \\ \smallskip
     {\Large Computer Lab Happy Hour } \\ \smallskip
+    %{\Large Computer Lab Happy Hour with Board Games!} \\ \smallskip
     {5.00pm  \today}
 \end{center}
 
-\medskip
+\smallskip
 
 \large
 \begin{center}
 
-{\em Additional donations after cost may also be made into the designated charity boxes. Thanks! } \\
-\bigskip
+{\em Additional donations after cost may also be made into the designated charity boxes. Thanks! }
+\smallskip
 
 \def\arraystretch{1.1}
 
@@ -47,18 +48,18 @@
 %\hline
 {\bf Other Alcoholic Drinks} & & \\
 %Simon's Cider & \pounds 1.00/pint & \pounds 1.20/pint \\
-%Large 500ml bottle: beer / cider & \pounds 1.70/bottle & \pounds 2.00/bottle \\
+Large 500ml ale bottle & \pounds 1.70/bottle & \pounds 2.00/bottle \\
 %Leffe bottle & \pounds 1.50/bottle & \pounds 1.80/bottle \\
-Cider/Ginger/Leffe bottle & \pounds 1.50/bottle & +30p/bottle \\
+Ginger beer/Leffe bottle & \pounds 1.50/bottle & +30p/bottle \\
 %Brewdog can & \pounds 1.50/can & \pounds 1.80/can \\
 Cider can & \pounds 1.20/can & +30p/can \\
-Stella/Kronenbourg Lager can & \pounds 1.00/can & +20p/can \\
+Lager can & \pounds 1.00/can & +20p/can \\
 %Cabernet Sauvignon (per 125ml) & \pounds 1.30/glass & \pounds 1.60/glass \\
 \medskip
 
 %\hline
 {\bf Soft Drinks} &&\\
-(Diet) Coke \& Fanta & 50p/can  & +10p/can \\
+(Diet) Coke, Dr Pepper \& Fanta & 50p/can  & +10p/can \\
 San Pellegrino & 80p/can & +20p/can \\
 Fruit juice/Poured soda & 20p/small~cup & +5p/small~cup \medskip \\
 
