--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -48,7 +48,7 @@
 %\hline
 {\bf Other Alcoholic Drinks} & & \\
 %Simon's Cider & \pounds 1.00/pint & \pounds 1.20/pint \\
-Large 500ml ale bottle & \pounds 1.70/bottle & \pounds 2.00/bottle \\
+Large 500ml ale bottle & \pounds 1.70/bottle & +30p/bottle \\
 %Leffe bottle & \pounds 1.50/bottle & \pounds 1.80/bottle \\
 Ginger beer/Leffe bottle & \pounds 1.50/bottle & +30p/bottle \\
 %Brewdog can & \pounds 1.50/can & \pounds 1.80/can \\
