--- a/happyhour_no_cask.tex
+++ b/happyhour_no_cask.tex
@@ -19,10 +19,6 @@
 
 \begin{document}
 
-%%%
-\placetextbox{0.5}{0.97}{\includegraphics[width=0.35\linewidth]{fig/<FIGNAME>.png}}
-%%%
-
 \begin{center}
   ~\vspace{5em}
    \par \bigskip \bigskip \smallskip
@@ -41,14 +37,8 @@
 
 \begin{tabular}{p{7.5cm}p{3cm}p{3cm}} & \textbf{Cost price} & \textbf{Suggested donation} \\
 \hline
-%%%
-\textbf{The Real Deal} & & \\
-<NAME> (<STRENGTH>\%) & \pounds <COST_PRICE>/pint & \pounds <DONATION>/pint \\
-\small \it <DESC> \medskip & & \\
-%%%
-
 %\hline
-{\bf Other Alcoholic Drinks} & & \\
+{\bf Alcoholic Drinks} & & \\
 %Simon's Cider & \pounds 1.00/pint & \pounds 1.20/pint \\
 Large 500ml ale bottle & \pounds 1.80/bottle & \pounds 2.10/bottle \\
 % Leffe bottle & \pounds 1.50/bottle & \pounds 1.80/bottle \\
