--- a/happyhour_free_portrait.tex
+++ b/happyhour_free_portrait.tex
@@ -23,7 +23,9 @@
 \begin{center}
 
     {\Large Computer Lab Happy Hour crew present:} \\ \smallskip
-    {\Large Open Day Thank You Event / Happy Hour \today}
+\today \\ \smallskip
+    {\Large Happy Hour courtesy of Amazon Cambridge
+}
 
     \vfill
 
@@ -32,8 +34,8 @@
 
     \vfill
 
-    \includegraphics[width=0.7\linewidth]{fig/zenobia.png} \bigskip \bigskip \\{\large Strong blonde ale, with US and NZ hops.}
-    %\includegraphics[width=0.7\linewidth]{fig/dionysus.png} \bigskip \bigskip \\{\large Straw-coloured bitter, powerfully hoppy, with a citrus finish. }
+    %\includegraphics[width=0.7\linewidth]{fig/zenobia.png} \bigskip \bigskip \\{\large Strong blonde ale, with US and NZ hops.}
+    \includegraphics[width=0.7\linewidth]{fig/dionysus.png} \bigskip \bigskip \\{\large Straw-coloured bitter, powerfully hoppy, with a citrus finish. }
     %\includegraphics[width=0.7\linewidth]{fig/pegasus.png} \bigskip \bigskip \\{\large Complex copper-coloured beer. Initial hoppiness balanced with a long fruity, malty finish. }
     %\includegraphics[width=0.7\linewidth]{fig/sparta.png} \bigskip \bigskip \\{\large Refreshing pale bitter. Packed with hop flavours and crisp bitterness.}
     %\includegraphics[width=0.7\linewidth]{fig/nero.png} \bigskip \bigskip \\{\large A satisfying, full-flavoured black brew with a good balance of malt, roast and fruit. Bittersweet flavours carry through to a dry finish. \\[1em] This beer is 'unfined': suitable for vegans.}
