--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -22,7 +22,13 @@
 %%%
 \placetextbox{0.5}{0.97}{\includegraphics[width=0.35\linewidth]{fig/<FIGNAME>.png}}
 %%%
+%\placetextbox{0.2}{0.97}{\parbox{7cm}{\centering\includegraphics[width=0.75\linewidth]{AllFormats-2.jpg}}}%\\All Formats\\Citra Pale Ale 5.2\%}}
+%\placetextbox{0.5}{0.97}{\parbox{7cm}{\centering\includegraphics[width=0.75\linewidth]{WWA_ElbowGrease_cask.png}}}%\\Elbow Grease\\Roasted Rye Porter 7.0\%}}
+%\placetextbox{0.8}{0.97}{\parbox{7cm}{\centering\includegraphics[width=0.75\linewidth]{twisted_barrel.png}}}%\\Elbow Grease\\Roasted Rye Porter 7.0\%}}
 
+%Wild Weather's Elbow Grease\\
+%Twisted Barrel's Behold a Pale Horse\\
+\sf
 \begin{center}
   ~\vspace{5em}
    \par \bigskip \bigskip \smallskip
@@ -41,34 +47,43 @@
 
 \begin{tabular}{p{7.5cm}p{3cm}p{3cm}} & \textbf{Cost price} & \textbf{Suggested donation} \\
 \hline
+
 %%%
 \textbf{The Real Deal} & & \\
 <NAME> (<STRENGTH>\%) & \pounds <COST_PRICE>/pint & \pounds <DONATION>/pint \\
-\small \it <DESC> \medskip & & \\
+%\small \it <DESC> \medskip & & \\
+%Wylam's All Formats  & \pounds 1/half & \pounds 1.2/half \\
+%\small \it Citra Pale Ale (5.2\%) \medskip & & \\
+%Wild Weather's Elbow Grease  & \pounds 1/half & \pounds 1.2/half \\
+%\small \it Roasted Rye Porter (7.0\%) \medskip & & \\
+%Twisted Barrel's Behold a Pale Horse  & \pounds 1/half & \pounds 1.2/half \\
+%\small \it Dry-hopped Belgian Tripel (8.7\%) \medskip & & \\
 %%%
 
 %\hline
-{\bf Other Alcoholic Drinks} & & \\
+\textbf{Other Alcoholic Drinks} & & \\
 %Simon's Cider & \pounds 1.00/pint & \pounds 1.20/pint \\
 Large 500ml ale bottle & \pounds 1.80/bottle & \pounds 2.10/bottle \\
-% Leffe bottle & \pounds 1.50/bottle & \pounds 1.80/bottle \\
-Ginger beer & \pounds 1.30/bottle & \pounds 1.60/bottle \\
+Leffe bottle & \pounds 1.50/bottle & \pounds 1.80/bottle \\
+%Ginger beer & \pounds 1.30/bottle & \pounds 1.60/bottle \\
 %Brewdog can & \pounds 1.50/can & \pounds 1.80/can \\
-Cider can & \pounds 1.20/can & \pounds 1.50/can \\
-Lager can/bottle & \pounds 1.00/unit & \pounds 1.20/unit \\
+Ginger beer/Cider can & \pounds 1.20/can & \pounds 1.50/can \\
+%Cider (poured) & \pounds 1.10/pint & \pounds 1.40/pint \\
+Lager can/bottle & \pounds 1.20/unit & \pounds 1.50/unit \\
 %Cabernet Sauvignon (per 125ml) & \pounds 1.30/glass & \pounds 1.60/glass \\
 \medskip
 
 %\hline
-{\bf Soft Drinks} &&\\
+\textbf{Soft Drinks} &&\\
 (Diet) Coke, Dr Pepper \& Fanta & 50p/can  & 60p/can \\
 San Pellegrino & 80p/can & \pounds 1.00/can \\
 Fruit juice/Poured soda & free \\ % 20p/small~cup & 25p/small~cup \medskip \\
 
+\medskip
 %\hline
-{\bf Snacks} & & \\
-Crisps & free \\
-%Crisps/Large Nuts &\pounds 1.00/bag & \pounds 1.20/bag \\
+\textbf{Snacks} & & \\
+Crisps/nuts/fruit snacks &\pounds 1.00/bag & \pounds 1.20/bag \\
+%Small bag of crisps & free \\
 %Small Nuts & 50p/bag & 60p/bag \\
 \hline
 \end{tabular}
