recent updates including support for new brewery, Rocket

--- a/happyhour_free_portrait.tex
+++ b/happyhour_free_portrait.tex
@@ -21,11 +21,17 @@
 \thispagestyle{empty}
 
 \begin{center}
+%\placetextbox{0.50}{0.99}{
+%\includegraphics[width=6cm]{Arm_logo_blue_LG_padded.png}
+%}
 
     {\Large Computer Lab Happy Hour crew present:} \\ \smallskip
 \today \\ \smallskip
-    {\Large Happy Hour courtesy of Amazon Cambridge
-}
+    %{\Large Happy Hour courtesy of ARM }
+    %{\Large Happy Hour with Board Games on the Street \\Part II End of Term Party }
+    %{\Large Happy Hour on the Street \\courtesy of Grad Student Forum }
+    %{\Large Happy Hour on the Street \\ Open Day Afterparty }
+    {\Large Happy Hour in the Fish Bowl }
 
     \vfill
 
@@ -35,7 +41,9 @@
     \vfill
 
     %\includegraphics[width=0.7\linewidth]{fig/zenobia.png} \bigskip \bigskip \\{\large Strong blonde ale, with US and NZ hops.}
-    \includegraphics[width=0.7\linewidth]{fig/dionysus.png} \bigskip \bigskip \\{\large Straw-coloured bitter, powerfully hoppy, with a citrus finish. }
+    \includegraphics[width=0.7\linewidth]{fig/justinian.png} \bigskip \bigskip \\{\large Crisp pale bronze-coloured bitter.}
+    %\includegraphics[width=0.7\linewidth]{fig/minotaur.png} \bigskip \bigskip \\{\large Rich dark mild }
+    %\includegraphics[width=0.7\linewidth]{fig/dionysus.png} \bigskip \bigskip \\{\large Straw-coloured bitter, powerfully hoppy, with a citrus finish. }
     %\includegraphics[width=0.7\linewidth]{fig/pegasus.png} \bigskip \bigskip \\{\large Complex copper-coloured beer. Initial hoppiness balanced with a long fruity, malty finish. }
     %\includegraphics[width=0.7\linewidth]{fig/sparta.png} \bigskip \bigskip \\{\large Refreshing pale bitter. Packed with hop flavours and crisp bitterness.}
     %\includegraphics[width=0.7\linewidth]{fig/nero.png} \bigskip \bigskip \\{\large A satisfying, full-flavoured black brew with a good balance of malt, roast and fruit. Bittersweet flavours carry through to a dry finish. \\[1em] This beer is 'unfined': suitable for vegans.}
@@ -50,7 +58,7 @@
 
     \vfill
 
-{\Large Other alcoholic and non-alcoholic beverages also available. \\Please do not move beer cask without assistance. \\[0.7em]Please place used glass bottles on a side table.}
+{\Large Other alcoholic and non-alcoholic beverages also available. \\\textbf{Please do not move beer cask; ask Matt for assistance.} \\[0.7em]Please place used glass bottles on a side table.}
 
 \end{center}
 
