--- a/happyhour_template.tex
+++ b/happyhour_template.tex
@@ -20,7 +20,7 @@
 \begin{document}
 
 %%%
-\placetextbox{0.5}{0.97}{\includegraphics[width=0.35\linewidth]{fig/<FIGNAME>.png}}
+\placetextbox{0.5}{0.97}{\includegraphics[width=0.35\linewidth]{"fig/<FIGNAME>".png}}
 %%%
 %\placetextbox{0.2}{0.97}{\parbox{7cm}{\centering\includegraphics[width=0.75\linewidth]{AllFormats-2.jpg}}}%\\All Formats\\Citra Pale Ale 5.2\%}}
 %\placetextbox{0.5}{0.97}{\parbox{7cm}{\centering\includegraphics[width=0.75\linewidth]{WWA_ElbowGrease_cask.png}}}%\\Elbow Grease\\Roasted Rye Porter 7.0\%}}
@@ -45,12 +45,14 @@
 
 \def\arraystretch{1.1}
 
-\begin{tabular}{p{7.5cm}p{3cm}p{3cm}} & \textbf{Cost price} & \textbf{Suggested donation} \\
+\begin{tabular}{p{7.5cm}p{3cm}p{3cm}} & \textbf{At-cost} & \textbf{Suggested donation} \\
 \hline
 
 %%%
 \textbf{The Real Deal} & & \\
 <NAME> (<STRENGTH>\%) & \pounds <COST_PRICE>/pint & \pounds <DONATION>/pint \\
+\medskip
+
 %\small \it <DESC> \medskip & & \\
 %Wylam's All Formats  & \pounds 1/half & \pounds 1.2/half \\
 %\small \it Citra Pale Ale (5.2\%) \medskip & & \\
@@ -60,22 +62,24 @@
 %\small \it Dry-hopped Belgian Tripel (8.7\%) \medskip & & \\
 %%%
 
+
 %\hline
 \textbf{Other Alcoholic Drinks} & & \\
 %Simon's Cider & \pounds 1.00/pint & \pounds 1.20/pint \\
-Large 500ml ale bottle & \pounds 1.80/bottle & \pounds 2.10/bottle \\
-Leffe bottle & \pounds 1.50/bottle & \pounds 1.80/bottle \\
+%Large 500ml ale bottle & \pounds 1.80/bottle & \pounds 2.10/bottle \\
+%Leffe bottle & \pounds 1.50/bottle & \pounds 1.80/bottle \\
 %Ginger beer & \pounds 1.30/bottle & \pounds 1.60/bottle \\
 %Brewdog can & \pounds 1.50/can & \pounds 1.80/can \\
 Ginger beer/Cider can & \pounds 1.20/can & \pounds 1.50/can \\
+Calverley's bottle & \pounds 2.00/bottle & \pounds 2.40/bottle \\
 %Cider (poured) & \pounds 1.10/pint & \pounds 1.40/pint \\
-Lager can/bottle & \pounds 1.20/unit & \pounds 1.50/unit \\
-%Cabernet Sauvignon (per 125ml) & \pounds 1.30/glass & \pounds 1.60/glass \\
+%Lager can/bottle & \pounds 1.20/unit & \pounds 1.50/unit \\
+%Wine (per 125ml) & \pounds 2.00/glass & \pounds 2.40/glass \\
 \medskip
 
 %\hline
 \textbf{Soft Drinks} &&\\
-(Diet) Coke, Dr Pepper \& Fanta & 50p/can  & 60p/can \\
+(Diet) Coke, Dr Pepper \& Sprite & 50p/can  & 60p/can \\
 San Pellegrino & 80p/can & \pounds 1.00/can \\
 Fruit juice/Poured soda & free \\ % 20p/small~cup & 25p/small~cup \medskip \\
 
@@ -85,6 +89,7 @@ Fruit juice/Poured soda & free \\ % 20p/small~cup & 25p/small~cup \medskip \\
 Crisps/nuts/fruit snacks &\pounds 1.00/bag & \pounds 1.20/bag \\
 %Small bag of crisps & free \\
 %Small Nuts & 50p/bag & 60p/bag \\
+%Puffs/popcorn &\pounds 0.50/bag & \pounds 0.60/bag \\
 \hline
 \end{tabular}
 \end{center}
